static/styles/zulip.scss
/* ... */
.dark_background a.message_label_clickable:hover {
    color: hsl(200, 99%, 60%);
}

.message_top_line {
    pointer-events: none;
    position: relative;
}

.message_top_line * {
    pointer-events: auto;
}

.include-sender .message_top_line {
    margin-top: 6px;
}

.small {
    font-size: 80%;
}

.tiny {
    font-size: 60%;
}

.actions_hovered .message_time,
.actions_hovered .info {
    color: hsl(200, 100%, 40%);
    cursor: pointer;
}

.info {
    display: inline-block;
    position: relative;
    font-size: 15px;
    color: hsl(0, 0%, 73%);
}

.actions_hovered .actions_link {
    text-decoration: underline;
}

div.message_table {
    border-collapse: separate;
    margin-left: auto;
    display: none;
    width: 100%;
}

.message_row {
    position: relative;
    border-left: 1px solid hsla(0, 0%, 0%, 0.10);
    border-right: 1px solid hsla(0, 0%, 0%, 0.10);
}

.message_row.selected_message {
    z-index: 2;
}

div.focused_table {
    display: block;
}

.include-sender .message_content:not(:empty) {
    margin-top: -16px;
}

.message_content {
    line-height: 17px;
    min-height: 17px;
    font-size: 14px;
    margin-left: 46px;
    display: block;
    position: relative;
}

.message_content:empty {
    display: none;
}

.message_edit_content {
    line-height: 18px;
    resize: vertical!important;
    max-height: 24em;
}

.message_edit_countdown_timer {
    text-align: right;
    display: inline;
    color: hsl(0, 0%, 63%);
}

.message_edit_tooltip {
    display: inline;
    color: hsl(0, 0%, 63%);
}

.message-edit-timer-control-group {
    float: right;
    display: none;
}

.topic_edit {
    display: none;
    line-height: 22px;
}

#inline_topic_edit,
#message_edit_topic {
    margin-bottom: 5px;
}

#inline_topic_edit.header-v {
    height: 18px;
    display: inline-block;
    margin: -2px 0 0 0;
    padding: 0px 3px;

    line-height: 0px;
    font-size: 14px;

    border-radius: 0px;
    border: 1px solid hsl(204, 20%, 74%);
    box-shadow: none;
}

#inline_topic_edit:focus,
#message_edit_topic:focus {
    outline: none;
}

.message_edit_topic_propagate {
    display: inline-block;
    width: 300px;
    margin-bottom: 5px !important;
    max-width: 100%;
}

#message-edit-history .message_author {
    position: relative;
}

#message-edit-history .author_details {
    display: block;
    font-size: 12px;
    vertical-align: middle;
    padding: 1px;
    position: absolute;
    right: -80px;
    line-height: 20px;
    text-align: right;
}

.message_content.condensed {
    max-height: 8.5em;
    min-height: 0em;
    overflow: hidden;
}

.message_content.collapsed {
    max-height: 0em;
    min-height: 0em;
    overflow: hidden;
}

.message_length_controller {
    display: none;
    text-align: center;
    color: hsl(200, 100%, 40%);

    /* to match .message_content */
    margin-left: 5px;
    margin-right: 35px;
    /* to make message-uncollapse easier */
    margin-top: 10px;
}

.message_length_controller:hover {
    text-decoration: underline;
}

div.message_content table {
    padding-right: 10px;
    margin: 5px 5px 5px 5px;
    width: 99%;
}

div.message_content thead {
    background-color: hsl(0, 0%, 93%);
}

div.message_content tr {
    display: table-row;
    vertical-align: inherit;
}

div.message_content tr th {
    border: 1px solid hsl(0, 0%, 80%);
    padding: 4px;
    text-align: left;
}

div.message_content tr td {
    border: 1px solid hsl(0, 0%, 80%);
    padding: 4px;
}

blockquote {
    margin-bottom: 6px;
}

blockquote p {
    line-height: inherit;
    font-size: inherit;
}

.messagebox {
    word-wrap: break-word;
    cursor: pointer;
    vertical-align: top;
    border: none;
}

.messagebox-content {
    padding: 4px 115px 1px 10px;
}

.last_message .messagebox-content {
    padding-bottom: 1px;
}

.messagebox p {
    margin: 3px 0px 10px 0px;
}

.messagebox p:last-of-type {
    margin-bottom: 3px;
}

.messagebox blockquote {
    padding-left: 5px;
    margin-left: 10px;
    border-left-color: hsl(0, 0%, 86%);
}

.bookend {
    margin-top: 10px;
    background-color: transparent;
}

.prev_is_same_sender.messagebox {
    padding-top: 0px;
}

.prev_is_same_sender.message_data {
    padding-top: 0px;
}

.next_is_same_sender {
    border-bottom: 0px;
    padding-bottom: 0px;
}

.inline_profile_picture {
    display: inline-block;
    width: 35px;
    height: 35px;
    margin-right: 11px;
    vertical-align: top;
    border-radius: 4px;
    overflow: hidden;
}

.home-error-bar {
    margin-top: 5px;
    display: none;
}

.streamname {
    font-weight: bold;
}

.home-error-bar .alert {
    margin-bottom: auto;
}

.brand.skinny-user-gravatar {
    display: table-cell;
    padding-top: 0px;
    padding-bottom: 0px;
    margin-bottom: 0px;
    white-space: nowrap;
}

#searchbox {
    width: 100%;
    height: 40px;
}

#tab_bar {
    z-index: 2;
    padding-top: 0px;
    overflow: hidden;
    text-overflow: ellipsis;
    float: left;
    letter-spacing: normal;
    height: 40px;
}

#tab_list {
    list-style: none;
    margin: 0px 0px 0px 0px;
    height: 40px;
    line-height: 40px;
    font-size: 16px;
    border: none;
    white-space: nowrap;
}

#tab_list li {
    white-space: nowrap;
    list-style-type: none;
    display: inline-block;
    position: relative;
    font-weight: 300;
    background-color: hsl(0, 0%, 97%);
    margin: 0px;
    padding: 0px;
    text-overflow: ellipsis;
    height: 40px;
    padding: 0 5px;
}

#tab_list li.inactive {
    background-color: hsl(0, 0%, 88%);
    border-width: 0px;
    margin-right: -4px;
    font-size: 14px;
}

#tab_list li.private_message a {
    color: hsl(0, 0%, 100%);
}

#tab_list li.inactive:before {
    left: 100%;
    top: 50%;
    content: " ";
    height: 0px;
    width: 0px;
    position: absolute;
    pointer-events: none;
    z-index: 1;
    -moz-transform: scale(.9999);
}
/* ... */

